@@ -1,7 +1,10 @@
 Tue Sep 16 22:09:50 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
 	* boot-9.scm (keyword->symbol, display-usage-report): Changed
- 	length --> string-length.
+ 	length --> string-length.  (Thanks to Aleksandar Bakic.)
+	(separate-fields-discarding-char, separate-fields-after-char,
+ 	separate-fields-before-char): Bugfix from Maciej Stachowiak
+	<mstachow@mit.edu>.  Thanks!
 
 Mon Sep 15 23:39:54 1997  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>
 
